@@ -1,5 +1,6 @@
 Search API 1.x, dev (xx/xx/xxxx):
 ---------------------------------
+- #2155575 by drunken monkey: Fixed incorrect "Server index status" warnings.
 - #2159011 by idebr, drunken monkey: Fixed highlighting of keywords with PCRE
   special characters.
 - #2155721 by rjacobs, drunken monkey: Added support for Views' get_total_rows
